--- a/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
@@ -3,23 +3,17 @@
     <div class="mb-3">
         <h1>Structure viewer</h1>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut elit ac sapien sagittis semper a egestas
-            sem.
-            Nulla sodales, nibh sit amet congue pharetra, mi ipsum placerat erat, vel suscipit mi urna id massa.
-            Praesent
-            venenatis nisl sed leo commodo scelerisque. Cras tempus posuere justo et imperdiet. Nulla facilisis nulla
-            malesuada, ultrices libero vitae, lacinia lorem. Nam gravida tempus ultricies. Integer hendrerit neque
-            mauris,
-            in dapibus sapien egestas et. Nunc ut vehicula nunc. Ut malesuada nulla erat, id ornare turpis faucibus sit
-            amet. Vestibulum congue volutpat ultricies.
+            The <b>ngx-structure-viewer</b> is a Mol* wrapper for Angular. It is a viewer for molecular structures and
+            can be used to visualize and interact with 3D molecular structures. It works out of the box with the latest
+            releases of Angular and automatized the most common features of Mol*.
         </p>
     </div>
     <!-- Section: choose sources -->
-    <!-- <app-section-sources></app-section-sources> -->
+    <app-section-sources></app-section-sources>
     <!-- Section: color chains -->
-    <!-- <app-section-chains></app-section-chains> -->
+    <app-section-chains></app-section-chains>
     <!-- Section: show contacts -->
-    <!-- <app-section-interactions></app-section-interactions> -->
+    <app-section-interactions></app-section-interactions>
     <!-- Section: show highlights -->
     <app-section-highlights></app-section-highlights>
 </div>
