--- a/projects/demo-showcase/src/app/page-home/page-home.component.scss
+++ b/projects/demo-showcase/src/app/page-home/page-home.component.scss
@@ -1,61 +1,18 @@
-$dark: #212529;
-
-.d-flex {
+.product-card {
+    // Set vertical flex layout
     display: flex;
-    flex-wrap: wrap;
-}
-
-.flex-col {
     flex-direction: column;
+    flex-wrap: nowrap;
+    // Define height, width
+    height: 100%;
+    width: 100%;
+    // Set cursor to pointer
+    cursor: pointer;
+    // Define shadow like .shadow-sm of Bootstrap
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
-.flex-row {
-    flex-direction: row;
-}
-
-.flex-center {
-    justify-content: center;
-    align-items: center;
-}
-
-.d-flex-center {
-    @extend .d-flex;
-    @extend .flex-center;
-}
-
-.vh-100 {
-    height: 100vh;
-}
-
-.vw-100 {
-    width: 100vw;
-}
-
-.font-monospace {
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: lighter;
-    font-kerning: normal;
-    font-size: medium;
-    color: $dark;
-}
-
-#ngx-features-viewer,
-#ngx-structure-viewer {
-    // Style subtitles
-    h2 {
-        margin-bottom: 0.5rem;
-        margin-top: 1.5rem
-    }
-    // Style thumbnails
-    img {
-        position: relative;
-        display: block;
-        border-radius: .75rem;
-        border: 1px solid $dark;
-        cursor: pointer;
-        // Hover effect
-        &:hover {
-            outline: 1px solid $dark;
-        }
-    }
+.product-card:hover {
+    // Define shadow like .shadow of Bootstrap
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
