--- a/projects/ngx-sequence-viewer/src/lib/ngx-sequence-viewer.component.html
+++ b/projects/ngx-sequence-viewer/src/lib/ngx-sequence-viewer.component.html
@@ -1,13 +1,13 @@
 <!-- Define container for index -->
 <div class="index">
-  @for (position of positions; track $index) {
+  @for (position of positions$ | async; track $index) {
     <div class="index-residue" 
       [id]="'index-residue-' + $index" 
       [style.background]="position?.background" 
       [style.color]="position?.color"
-      (mouseenter)="onMouseEnter($event, $index)"
-      (mousedown)="onMouseDown($event, $index)"
-      (mouseup)="onMouseUp($event, $index)"
+      (mouseenter)="onMouseEnter($event, $index + 1)"
+      (mousedown)="onMouseDown($event, $index + 1)"
+      (mouseup)="onMouseUp($event, $index + 1)"
     >
       {{ index[$index] }}
     </div>
@@ -19,13 +19,13 @@
 <!-- Define container for sequence -->
 <div class="sequence">
   @for (c of sequence; track $index) {
-    <div class="sequence-residue" 
+    <div class="sequence-residue"
       [id]="'sequence-residue-' + $index"
       [style.background]="colors[c]['background'] || colors['-']['background']" 
       [style.color]="colors[c]['color'] || colors['-']['color']"
-      (mouseenter)="onMouseEnter($event, $index)"
-      (mousedown)="onMouseDown($event, $index)"
-      (mouseup)="onMouseUp($event, $index)"
+      (mouseenter)="onMouseEnter($event, $index + 1)"
+      (mousedown)="onMouseDown($event, $index + 1)"
+      (mouseup)="onMouseUp($event, $index + 1)"
     >
       {{ c }}
     </div>
