--- a/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
@@ -9,9 +9,9 @@
         </p>
     </div>
     <!-- Section: choose sources -->
-    <!-- <app-section-sources></app-section-sources> -->
+    <app-section-sources></app-section-sources>
     <!-- Section: color chains -->
-    <app-section-chains></app-section-chains>
+    <!-- <app-section-chains></app-section-chains> -->
     <!-- Section: show contacts -->
     <!-- <app-section-interactions></app-section-interactions> -->
     <!-- Section: show highlights -->
