Introduces React UI rendering. Does it make sense to call React from within Angular? No. DO they want it? Yes.

--- a/projects/ngx-structure-viewer/src/lib/ngx-structure-viewer.component.scss
+++ b/projects/ngx-structure-viewer/src/lib/ngx-structure-viewer.component.scss
@@ -13,15 +13,15 @@
     left: 0; 
     top: 0; 
   }
-  // Define inner label
-  &-label {
-    position: absolute;
-    padding: .25rem;
-    margin: 1rem;
-    height: auto;
-    width: auto; 
-    bottom: 0;
-    right: 0; 
-  }
+  // // Define inner label
+  // &-label {
+  //   position: absolute;
+  //   padding: .25rem;
+  //   margin: 1rem;
+  //   height: auto;
+  //   width: auto; 
+  //   bottom: 0;
+  //   right: 0; 
+  // }
 }
 
