ngx-features-viewer: major fix to hierarchy initialization. Implemented custom label.

--- a/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
@@ -15,6 +15,10 @@
     </div>
     <!-- Show output -->
     <div style="display: block; height: auto; width: 100%;">
-        <ngx-features-viewer [sequence]="sequence" [features]="features" [settings]="settings"></ngx-features-viewer>
+        <ngx-features-viewer [sequence]="sequence" [features]="features" [settings]="settings">
+            <ng-template let-trace="trace" [ngx-features-viewer-label]>
+                <div [class.text-muted]="!trace.expanded">{{ trace.label }}</div>
+            </ng-template>
+        </ngx-features-viewer>
     </div>
 </div>
