Implemented lazy-loading for pages. This avoids hitting the bundle budget limits

--- a/projects/demo-showcase/src/app/app.component.html
+++ b/projects/demo-showcase/src/app/app.component.html
@@ -1,9 +1,10 @@
 <!-- Define header (navigation) -->
 <header>
   <nav class="navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="assets/ngx-biocomp-up-white.svg" alt="ngx-biocomp-up" height="32" class="d-inline-block align-text-top">
+    <div class="container-fluid justify-content-center">
+      <a class="navbar-brand d-flex flex-row gap-3" href="#">
+        <img src="assets/ngx-biocomp-up-white.png" alt="ngx-biocomp-up" height="56">
+        <h1>ngx-biocomp-up</h1>
       </a>
     </div>
   </nav>
@@ -18,7 +19,7 @@
   <div class="row">
     <!-- Left side: BioCompUP -->
     <div class="col-3 d-flex justify-content-start">
-      <img src="assets/biocomp.svg" alt="BioComputing UP" height="36">
+      <img src="assets/biocomp-white.png" alt="BioComputing UP" height="36">
     </div>
     <!-- Center: my own GitHub -->
     <div class="col-6 d-flex align-items-center justify-content-center">
@@ -28,7 +29,7 @@
     </div>
     <!-- Right side: UniPD -->
     <div class="col-3 d-flex justify-content-end">
-      <img src="assets/unipd.svg" alt="University of Padua" height="36">
+      <img src="assets/unipd-white.png" alt="University of Padua" height="36">
     </div>
   </div>
 </footer>
