Removes .nx folder

--- a/projects/demo-showcase/src/app/page-home/page-home.component.html
+++ b/projects/demo-showcase/src/app/page-home/page-home.component.html
@@ -9,7 +9,7 @@
     <div class="row align-items-stretch mb-3">
         <!-- Structure viewer -->
         <div class="col-4">
-            <div class="card bg-body-tertiary mb-3">
+            <div class="card bg-body-tertiary cursor-pointer shadow-sm mb-3" routerLink="/structure">
                 <h2 class="card-header bg-primary"><i class="bi bi-boxes me-3"></i> ngx-structure-viewer</h2>
                 <div class="card-body">
                     <!-- <h5 class="card-title">Special title treatment</h5>
@@ -33,7 +33,7 @@
         </div>
         <!-- Features viewer -->
         <div class="col-4">
-            <div class="card bg-body-tertiary mb-3" routerLink="/features">
+            <div class="card bg-body-tertiary cursor-pointer shadow-sm mb-3" routerLink="/features">
                 <h2 class="card-header bg-primary">
                     <i class="bi bi-sliders me-1"></i> ngx-features-viewer
                 </h2>
@@ -59,7 +59,7 @@
         </div>
         <!-- Sequence viewer -->
         <div class="col-4">
-            <div class="card bg-body-tertiary mb-3" routerLink="/structure">
+            <div class="card bg-body-tertiary cursor-pointer shadow-sm mb-3" routerLink="/sequence">
                 <h2 class="card-header bg-primary">
                     <i class="bi bi-body-text me-1"></i> ngx-sequence-viewer
                 </h2>
@@ -84,9 +84,9 @@
     <div class="row">
         <div class="col-12">
             <!-- Enhanced interactivity -->
-            <div class="card mb-3" routerLink="/structure">
+            <div class="card mb-3">
                 <h2 class="card-header bg-primary">
-                    <i class="bi bi-recycle me-1"></i> enhanced interactivity
+                    <i class="bi bi-recycle me-1"></i> Enhanced interactivity
                 </h2>
                 <div class="card-body">
                     <!-- Description -->
