--- a/projects/demo-showcase/src/app/app.component.html
+++ b/projects/demo-showcase/src/app/app.component.html
@@ -2,9 +2,9 @@
 <header>
   <nav class="navbar">
     <div class="container-fluid justify-content-center">
-      <a class="navbar-brand d-flex flex-row gap-3" href="#">
-        <img src="assets/ngx-biocomp-up-white.png" alt="ngx-biocomp-up" height="56">
-        <h1>ngx-biocomp-up</h1>
+      <a class="navbar-brand d-flex flex-row align-items-center gap-3" href="#">
+        <img src="assets/ngx-biocomp-up-white.png" alt="ngx-biocomp-up" height="48">
+        <h1 class="h2">ngx-biocomp-up</h1>
       </a>
     </div>
   </nav>
