Trying adding second label

--- a/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-features-viewer/page-features-viewer.component.html
@@ -36,7 +36,7 @@
     <!-- Show output -->
     <div style="display: block; height: auto; width: 100%;">
         <ngx-features-viewer [sequence]="sequence" [features]="features" [settings]="settings">
-            <ng-template let-trace="trace" [ngx-features-viewer-label]>
+            <ng-template let-trace="trace" [ngx-features-viewer-label-right]>
                 <div [class.text-muted]="!trace.expanded">
                     {{ trace.label }}&nbsp;
                     <!-- Add symbol if expanded -->
@@ -47,6 +47,17 @@
                     }
                 </div>
             </ng-template>
+          <ng-template let-trace="trace" [ngx-features-viewer-label-left]>
+            <div [class.text-muted]="!trace.expanded">
+              {{ trace.label }}&nbsp;
+              <!-- Add symbol if expanded -->
+              @if (trace.expanded) {
+                <i class="bi bi-caret-down-fill"></i>
+              } @else {
+                <i class="bi bi-caret-right"></i>
+              }
+            </div>
+          </ng-template>
         </ngx-features-viewer>
     </div>
     <!-- TODO Remove this -->
