--- a/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.html
+++ b/projects/ngx-features-viewer/src/lib/ngx-features-viewer.component.html
@@ -1,11 +1,21 @@
 <div style="position: relative; display: block; width: 100%; height: 100%;" #root>
   <!-- Case inner label exists -->
-<!--  @if (label) {-->
+  @if (labelLeft) {
+    <!-- Loop through each trace, generate custom tooltip -->
+    @for(kv of featuresService.traces | keyvalue; track $index) {
+      <!-- Then, generate trace as specified in the given template -->
+      <div [id]="'label-' + kv.key" tabindex=0 (click)="drawService.onLabelClick(kv.value)" (keyup)="drawService.onLabelClick(kv.value)">
+        <ng-container [ngTemplateOutlet]="labelLeft.templateRef" [ngTemplateOutletContext]="{ trace: kv.value }"></ng-container>
+      </div>
+    }
+  }
+
+<!--  @if (labelRight) {-->
 <!--    &lt;!&ndash; Loop through each trace, generate custom tooltip &ndash;&gt;-->
 <!--    @for(kv of featuresService.traces | keyvalue; track $index) {-->
 <!--      &lt;!&ndash; Then, generate trace as specified in the given template &ndash;&gt;-->
 <!--      <div [id]="'label-' + kv.key" tabindex=0 (click)="drawService.onLabelClick(kv.value)" (keyup)="drawService.onLabelClick(kv.value)">-->
-<!--        <ng-container [ngTemplateOutlet]="label.templateRef" [ngTemplateOutletContext]="{ trace: kv.value }"></ng-container>-->
+<!--        <ng-container [ngTemplateOutlet]="labelRight.templateRef" [ngTemplateOutletContext]="{ trace: kv.value }"></ng-container>-->
 <!--      </div>-->
 <!--    }-->
 <!--  }-->
