--- a/projects/demo-showcase/src/styles.scss
+++ b/projects/demo-showcase/src/styles.scss
@@ -35,7 +35,8 @@
 @import "../../../node_modules/bootstrap/scss/utilities/api";
 
 // 8. Add additional custom code here
-@import "../../../node_modules/bootstrap-icons/font/bootstrap-icons.scss";
+//@import "../../../node_modules/bootstrap-icons/font/bootstrap-icons.scss";
 @import "./styles/background";
 @import "./styles/scaffold";
 @import "./styles/utils";
+
