Upgrades to React 18; Introduces optional providers

--- a/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
+++ b/projects/demo-showcase/src/app/page-structure-viewer/page-structure-viewer.component.html
@@ -13,7 +13,7 @@
     <!-- Section: color chains -->
     <app-section-chains></app-section-chains>
     <!-- Section: show contacts -->
-    <!-- <app-section-interactions></app-section-interactions> -->
+    <app-section-interactions></app-section-interactions>
     <!-- Section: show highlights -->
-    <!-- <app-section-highlights></app-section-highlights> -->
+    <app-section-highlights></app-section-highlights>
 </div>
