Update label creation

--- a/projects/ngx-features-viewer/src/styles/_labels.scss
+++ b/projects/ngx-features-viewer/src/styles/_labels.scss
@@ -1,97 +1,4 @@
-// Apply style to labels group
-.labels {
-  // Style sequence
-  #label-sequence .parent div {
-    // Hide caret
-    i {
-      display: none;
-    }
-    // Reset cursor
-    cursor: default;
-  }
-  // Style active (open) or not status
-  .label {
-    // Case feature has no children
-    .children-0 > i {
-      // Then, set invisible
-      visibility: hidden;
-    }
-    // Set transition for caret
-    & i::before {
-      transition: transform 0.4s;
-    }
-    // Set active status
-    &.active i::before {
-      transform: roate(0deg);
-    }
-    // Set non-active status
-    &:not(.active) i::before {
-      transform: rotate(-90deg);
-    }
-  }
-  // Style depth
-  .label div {
-    // Set display
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
-    // Set sizes
-    box-sizing: border-box;
-    // Span must occupy the whole width
-    height: 100%;
-    width: 100%;
-    // Style cursor
-    cursor: pointer;
-
-    span {
-      text-wrap: wrap;
-      line-break: anywhere;
-      flex-shrink: 1;
-      flex-grow: 1;
-    }
-
-    i {
-      flex-shrink: 0;
-      flex-grow: 0;
-    }
-  }
-  // Define allowed depths
-  $depths: 0, 1, 2, 3, 4, 5;
-  // Update paddiong according to each depth
-  @each $depth in $depths {
-    div.depth-#{$depth} {
-      // Set width to cover container
-      width: 100%;
-      // Initialize padding
-      padding: 0 0.25rem;
-      // Update padding
-      padding-left: calc(0.75rem * calc($depth + 1));
-    }
-  }
+.label {
+    position: absolute;
+    overflow: hidden;
 }
-
-// // Style custom y-axis ticks
-// .label div {
-//     cursor: pointer;
-//   }
-//   // Style labels
-//   .label {
-//     // Hide caret for sequence label
-//     &.sequence i {
-//       display: none;
-//     }
-//     // Set transition for caret
-//     & i::before {
-//       transition: transform 0.4s;
-//     }
-//     // Set active status
-//     &.active i::before {
-//       transform: roate(0deg);
-//     }
-//     // Set non-active status
-//     &:not(.active) i::before {
-//       transform: rotate(-90deg);
-//     }
-//   }
