--- a/projects/demo-showcase/src/styles.scss
+++ b/projects/demo-showcase/src/styles.scss
@@ -30,6 +30,7 @@
 @import "../../../node_modules/bootstrap/scss/progress";
 @import "../../../node_modules/bootstrap/scss/nav";
 @import "../../../node_modules/bootstrap/scss/card";
+@import "../../../node_modules/bootstrap/scss/buttons";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../node_modules/bootstrap/scss/utilities/api";
